Fixed images appearing over nav bar and nav bar height too low issue

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ p {
     margin: 0;
 	margin-left: 10%;
 	margin-top: 20%;
+	margin-bottom:10%;
 	line-height: 2em;
     padding: 0;
     width: 10%;
@@ -70,6 +71,7 @@ p {
     overflow: auto;
 	background-color: #8EE4AF;
 	border: 100px;
+	z-index: 100;
 }
 #navbar  > li a{
 	display:block;
@@ -123,16 +125,17 @@ img.skillsIcon{
 	#navBar{
 		list-style-type: none;
 		margin: auto;
+		margin-bottom: 10%;
 		padding: 0;
 		overflow: hidden;
 		position:fixed;
 		top:0;
-		width:100%;
-		height:6%;
+		width:auto;
+		height:auto;
 	}
 	#navBar > li {
 		float: left;
-		padding: 1em 1em;
+		padding: 0.5em 0.5em;
 		text-align: center;
 		color:#05386B;
 		display:inline;
